objects/License__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Exp__c</fullName>
        <label>Contract Exp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start__c</fullName>
        <label>Contract Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitlement_End__c</fullName>
        <label>Entitlement End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fault_Tolerant_Services__c</fullName>
        <label>Fault Tolerant Servers</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_End__c</fullName>
        <label>Key End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Types__c</fullName>
        <label>License Types</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locking_ID__c</fullName>
        <label>Locking ID</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maint_End__c</fullName>
        <label>Maint End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maint_PO__c</fullName>
        <label>Maint PO #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maint_Status__c</fullName>
        <label>Maint Status</label>
        <picklist>
            <picklistValues>
                <fullName>ACTIVE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>INACTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPIRED-CLOSED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Node_ID__c</fullName>
        <label>Node ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_ID__c</fullName>
        <label>Partner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_End__c</fullName>
        <label>Product End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Licenses (Product Name)</relationshipLabel>
        <relationshipName>Licenses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <label>Product Number</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_PO__c</fullName>
        <label>Product PO #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Start__c</fullName>
        <label>Product Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>SALES</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eDA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Type</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <label>Site Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_City__c</fullName>
        <label>Site City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Country__c</fullName>
        <label>Site Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_State__c</fullName>
        <label>Site State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Zipcode__c</fullName>
        <label>Site Zipcode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>ACTIVE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>INACTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPIRED-CLOSED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_ID__c</fullName>
        <label>System ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>License x</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fault_Tolerant_Services__c</columns>
        <columns>Locking_ID__c</columns>
        <columns>Node_ID__c</columns>
        <columns>Status__c</columns>
        <columns>System_ID__c</columns>
        <columns>Product_Status__c</columns>
        <columns>Partner_ID__c</columns>
        <columns>Maint_End__c</columns>
        <columns>Product_Start__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>License Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licenses x</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>